--- a/demo.html
+++ b/demo.html
@@ -9,8 +9,6 @@
 <body>
     <P>first chnage</P>
     <p>second chnage</p>
-    <p>third chnage</p>
-    <p>forth chnage</p>
-    <p>fifth chnage</p>
+    <p>sixth chnage</p>
 </body>
 </html>
